feat: issued the sv in css and html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Open+Sans:wght@300;400;600;700&display=swap"
 </head>
 <body>
-    
+    <header>
+        <img src="assets/image/Asset_8.png" alt="volna">
+        <div class="container">
+            <div class="relo">
+                <div class="heading">
+                    <h1>
+                        Kulesh Alexandra 
+                        <br/>
+                        Front-end web developer
+                    </h1>
+                </div>
+                <div class="yello"></div>
+            </div>
+        </div>
+    </header>
+    <section class="contacts">
+        <div class="container">
+            <div class="rectangle">
+                <div class="alig">
+                    <h2>CONTACTS</h2>
+                    <ul class="list">
+                        <li  class="list_item"><a href="#"  class="list_link">+37529 678 87 90</a></li>
+                        <li class="list_item"><a href="alexandrakulesh@yandex.by" class="list_link">alexandrakulesh@yandex.by</a></li>
+                        <li class="list_item"><a href="terypot56ddf@gmail.com" class="list_link">terypot56ddf@gmail.com</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <div class="rectangle">
+                <div class="alig">
+                    <h2>ABOUT ME</h2>
+                    <p class="text_about">  My name is Alexandra, I am a beginner programmer.Also, in my free time, I am fond of website design.I will be glad to cooperate with you.Ready to constantly develop and learn.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="container">
+            <div class="rectangle">
+                <div class="alig">
+                    <h2>SKILLS</h2>
+                    <ul class="list">
+                        <li class="schtml">HTML5</li>
+                        <li class="schtml">CSS3</li>
+                        <li class="schtml">JS basic</li>
+                        <li class="schtml">PUG</li>
+                        <li class="schtml">SCSS</li>
+                        <li class="schtml">Figma</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="code">
+        <div class="container">
+            <div class="rectangle">
+                <div class="alig">
+                    <h2>CODE</h2>
+                    <p><code>
+                        function checkParent (src, dest) {<Br>
+                         while (src != null) {<Br>
+                           if (src.tagName == dest) return src<Br>
+                            src = src.parentElement<Br>
+                         }<Br>
+                         return null<Br>
+                        }</code></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="Languages">
+        <div class="container">
+            <div class="rectangle">
+                <div class="alig">
+                    <h2>LANGUAGES</h2>
+                    <ul class="list">
+                        <li class="schtml">Russian (Native)</li>
+                        <li class="schtml">Belarusian (Native)</li>
+                        <li class="schtml">English ( Pre-Intermediate)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+       <div class="container">
+            <div class="log">
+                <div class="logon">
+                    <a href="https://github.com/kuleshalexandra/rsschool-cv/tree/rsschool-cv-html" class="log_foot"><img src="assets/image/github-logo_icon-icons.com_73546.svg" alt="logo" class="fot"></a>
+                    <p class="data"> 2022 by Alex Kulesh</p>
+                    <a href="https://rs.school/js/" class="log_foot"><img src="assets/image/rs_school_js.svg" alt="logo" class="fot2"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
